# ssi

./: .gitignore
res/: materials.xml
src/: CMakeLists.txt
src/items/: CMakeLists.txt  component.cc  component.h  component_builder.cc  component_builder.h  component_library.cc  component_library.h  ore.cc  ore.h
src/machines/: CMakeLists.txt  smelter.cc  smelter.h
src/mcu/: CMakeLists.txt  ram.cc  ram.h  rom.cc  rom.h  rv32core.cc  rv32core.h  system_bus.cc  system_bus.h
src/model/: CMakeLists.txt  machine.cc  machine.h  material.cc  material.h  material_builder.cc  material_builder.h  material_library.cc  material_library.h  structures.h  time_constants.h  transport_device.h  transport_endpoint.cc  transport_endpoint.h  transport_tube.cc  transport_tube.h  uuid.cc  uuid.h  vector.cc  vector.h  voxel_occupant.cc  voxel_occupant.h  world.cc  world.h  world_updates.cc  world_updates.h
src/reactions/: CMakeLists.txt  product.h  reactant.h  reactant_constraint.h  reaction.cc  reaction.h
src/test/: CMakeLists.txt  test_items_component_library.cc  test_machines_smelter.cc  test_mcu.cc  test_model_material_library.cc  test_model_transport_tubes.cc  test_model_vector.cc  testutil_endpoints.cc  testutil_endpoints.h
